language/move-lang/tests/move_check/translated_ir_tests/move/signer/copy_loc.move
module 0x8675309::M {
    fun t(s: signer): signer {
        copy s
    }
}
// check: COPYLOC_RESOURCE_ERROR
